# SpecGap

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json  pyproject.toml  render.yaml  t.txt  test.json
Frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/api/: client.ts  hooks.ts
Frontend/src/components/audit/: CommentsPanel.tsx  DeepAnalysisView.tsx  DocumentsList.tsx  FindingsList.tsx  FlashcardStack.tsx  FlashcardView.tsx  MermaidRenderer.tsx  RedlineEditor.tsx  VectorSearchPanel.tsx  index.ts
Frontend/src/components/auth/: ProtectedRoute.tsx
Frontend/src/components/layout/: AppLayout.tsx  AppSidebar.tsx  Breadcrumbs.tsx  index.ts
Frontend/src/pages/: AuditDetailPage.tsx  AuditResultsPage.tsx  AuditsPage.tsx  AuthPage.tsx  Dashboard.tsx  GlobalSearchPage.tsx  SettingsPage.tsx  UploadPage.tsx
Frontend/src/stores/: auditResultStore.ts  authStore.ts  uploadStore.ts
Frontend/src/types/: api.ts
specgap/: .env.example  README.md  gen_test.py  requirements.txt  run_backend.py  specgap_audits.db
specgap/app/: main.py
specgap/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  middleware.py  prompts.py  queue_manager.py
specgap/app/schemas/: __init__.py  responses.py
specgap/app/services/: __init__.py  biz_engine.py  chunker.py  cross_check.py  parser.py  patch_pack.py  safe_parse.py  sanitizer.py  tech_engine.py  workflow.py
(+1 files in other folders)
