[project]
name = "specgap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.19.0",
    "fastapi==0.109.0",
    "google-generativeai==0.3.2",
    "langchain>=1.2.8",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.7",
    "pandas==2.2.0",
    "pdf2image==1.16.3",
    "pdfplumber==0.10.3",
    "pillow==10.2.0",
    "pydantic>=2.6.0",
    "pytesseract==0.3.10",
    "python-docx==1.1.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.25",
    "tabulate==0.9.0",
    "uvicorn==0.27.0",
]
